--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,10 +21,10 @@ body {
 }
 
 .header h1 .seo {
-    color: #d9dcd6;
+    color: #a8aca5;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
